test/ingress/http01/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-http01
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: nginx
  tls:
  # both secretName and hosts are required for automatic certificate creation
  - secretName: echo-http01
    hosts:
    - echo-http01.AUTOMATIC_REPLACE.duckdns.org
  rules:
  - host: echo-http01.AUTOMATIC_REPLACE.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo
            port:
              name: http
