test/ingress/http01/kustomization.yaml
---
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

resources:
- ingress.yaml
- ../../../ingress/manual-wildcard/domain-info

replacements:
- source:
    kind: ConfigMap
    name: main-domain
    fieldPath: data.subdomain
  targets:
  - select:
      kind: Ingress
      name: echo-http01
    options:
      delimiter: .
      index: 1
    fieldPaths:
    - spec.rules.0.host
  - select:
      kind: Ingress
      name: echo-http01
    options:
      delimiter: .
      index: 1
    fieldPaths:
    - spec.tls.0.hosts.0
